<resources>
    <string name="app_name">AveDex</string>
    <string name="common__email_hint">Email</string>
    <string name="common__password_hint">Password</string>
    <string name="login__password_recovery_button">Forgot your password?</string>
    <string name="login__login_button">Log in</string>
    <string name="login__sign_up_button">Sign Up</string>
    <string name="common__back_arrow_button">Back arrow</string>
    <string name="sign_up__header">Sign up</string>
    <string name="sign_up__full_name_hint">Full Name</string>
    <string name="sign_up__sign_up_button">Sign Up</string>
    <string name="hello_blank_fragment">Hello Blank Fragment</string>
    <string name="login__login_with_google_button">Or continue with Google</string>
    <string name="account_menu__open_avedex">Open AveDex</string>
    <string name="account_menu__sign_out">Sign Out</string>
    <string name="avedex__image_content">Bird image</string>
    <string name="avedex__header">Your Avedex</string>
    <string name="bird_dialog__subtitle">Descubierto en</string>
    <string name="bird_description_fragment">Bird Description Fragment</string>
    <string name="cuervo">Cuervo</string>
    <string name="your_bird">Your bird</string>
    <string name="real_bird">Real bird</string>
    <string name="is_it_the_same_bird">Is it the same bird?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
</resources>